--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,21 @@
-﻿# Firebase Configuration
-# Copy this file to .env.local and fill in your actual values
-VITE_FIREBASE_API_KEY=your_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+# Firebase Configuration (from Firebase Console)
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+
+# Backend API Gateway URL
+VITE_BACKEND_BASE_URL=your_api_gateway_base_url
+
+# Cloudinary Configuration (for frontend - public key only)
+VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name
+VITE_CLOUDINARY_API_KEY=your_cloudinary_api_key
+
+# Cloudinary Configuration (for Firebase Functions - server-side)
+VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# NEVER commit these values to version control!
