Dashboard card UI updated + default image env option added + better header dashboard option routing

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,6 @@ VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
+# Default Ontology Image
+VITE_DEFAULT_ONTOLOGY_IMAGE_URL=optional_default_image_url
 # NEVER commit these values to version control!
